Fix background if overflow div. Progress in add podcast

--- a/src/user/upload/upload.css
+++ b/src/user/upload/upload.css
@@ -2,6 +2,16 @@
 	display: flex;
 }
 
+.upload-flex {
+	background-color: wheat;
+    margin-left: -20px;
+    padding-left: 20px;
+}
+
+.upload-flex .center-btn {
+	margin-bottom: 20px;
+}
+
 .upload-file-input {
 	cursor: pointer;
 	opacity: 0;
